Fixed Recent RNG not showing up anymore.

--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ header {
 }
 
 .recent-rngs {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 40vh;
   width: 200px;
